apps/staging/rbx-ledger/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-ledger-backend
  namespace: rbx-ledger
  labels:
    app.kubernetes.io/name: rbx-ledger-backend
spec:
  selector:
    app.kubernetes.io/name: rbx-ledger-backend
  ports:
    - port: 8080
      targetPort: http
      name: http
