apps/staging/rbx-ledger/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbx-ledger-frontend
  namespace: rbx-ledger
  labels:
    app.kubernetes.io/name: rbx-ledger-frontend
spec:
  selector:
    app.kubernetes.io/name: rbx-ledger-frontend
  ports:
    - port: 80
      targetPort: http
      name: http
